Converted pricing service into Eureka Server.

--- a/pricing-service/src/main/resources/application.properties
+++ b/pricing-service/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-server.port=8082
+spring.application.name=eureka-server
+
+# avoid registering itself as a client
+logging.level.com.netflix.eureka=ON
+logging.level.com.netflix.discovery=ON
+
+
+eureka.client.registerWithEureka = false
+eureka.client.fetchRegistry = false
+server.port = 8761
