--- a/pricing-service/src/main/resources/application.properties
+++ b/pricing-service/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.application.name=eureka-server
+spring.application.name=pricing-service
+server.port=8082
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
 
-# avoid registering itself as a client
-logging.level.com.netflix.eureka=ON
-logging.level.com.netflix.discovery=ON
 
-
-eureka.client.registerWithEureka = false
-eureka.client.fetchRegistry = false
-server.port = 8761
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+spring.datasource.url=jdbc:h2:mem:prices
